solve issue of WB being cut off in the note viewer.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@10932 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_notes.scss
+++ b/src/main/resources/scss/_notes.scss
@@ -111,7 +111,7 @@
 
 				img.wb-thumbnail {
 					height: auto;
-					max-height: 450px;
+					//max-height: 450px;
 					width: 100%;//100% of width of container
 					display: block;
 					clear: both;
@@ -807,7 +807,8 @@
 
 			.body-divider .whiteboard-thumbnail{
 			  width: 580px;
-			  height: 450px !important;
+			  height: 580px !important;
+			  max-height: 580px !important;
 			}
 		}
 
